Fixing code smells in branch